# InfinityCore

./: .gitignore  .travis.yml  CMakeLists.txt  PreLoad.cmake  README.TELENPC2  README.md  THANKS  revision.h.in.cmake
src/: CMakeLists.txt
src/common/: CMakeLists.txt  Common.h
src/common/Collision/: CMakeLists.txt  DynamicTree.cpp
src/common/Collision/Management/: VMapManager2.cpp
src/common/Collision/Maps/: MapTree.cpp  TileAssembler.h
src/common/Collision/Models/: GameObjectModel.cpp  ModelInstance.cpp  WorldModel.cpp
src/common/Cryptography/: BigNumber.cpp  Hmac.cpp  Hmac.h  SARC4.cpp  SARC4.h  Sha1.cpp  Sha1.h
src/common/Debugging/: WheatyExceptionReport.cpp
src/common/Logging/: Log.cpp
src/common/Threading/: Threading.cpp  Threading.h
src/common/Utilities/: DataMap.h  Util.cpp
src/framework/: CMakeLists.txt
src/framework/Platform/: Define.h
src/genrev/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/authserver/: AuthSocket.cpp  AuthSocket.h  CMakeLists.txt  Main.cpp  PatchHandler.h  RealmList.cpp  TOTP.cpp  TOTP.h  authserver.conf.dist  authserver.rc
src/server/authserver/Authentication/: AuthCodes.cpp  AuthCodes.h
src/server/authserver/Realms/: RealmList.cpp  RealmList.h
src/server/authserver/Server/: AuthSocket.cpp  AuthSocket.h  RealmAcceptor.h  RealmSocket.cpp  RealmSocket.h
src/server/collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  BoundingIntervalHierarchyWrapper.h  CMakeLists.txt  DynamicTree.cpp  DynamicTree.h  VMapDefinitions.h  VMapTools.h
src/server/collision/Management/: IVMapManager.h  MMapFactory.cpp  MMapFactory.h  MMapManager.cpp  MMapManager.h  VMapFactory.cpp  VMapFactory.h  VMapManager2.cpp  VMapManager2.h
src/server/collision/Maps/: MapTree.cpp  MapTree.h  TileAssembler.cpp  TileAssembler.h
src/server/collision/Models/: GameObjectModel.cpp  GameObjectModel.h  ModelInstance.cpp  ModelInstance.h  WorldModel.cpp  WorldModel.h
src/server/database/Database/: Database.cpp  Database.h  Field.h  QueryResult.h
src/server/game/: CMakeLists.txt
src/server/game/AI/: CreatureAI.cpp  CreatureAI.h  CreatureAIFactory.h  CreatureAIImpl.h  CreatureAIRegistry.cpp  CreatureAIRegistry.h  CreatureAISelector.cpp  CreatureAISelector.h
src/server/game/Accounts/: AccountMgr.cpp  AccountMgr.h
src/server/game/Achievements/: AchievementMgr.cpp  AchievementMgr.h
src/server/game/Addons/: AddonMgr.cpp  AddonMgr.h
src/server/game/AuctionHouse/: AuctionHouseMgr.cpp  AuctionHouseMgr.h
src/server/game/AuctionHouseBot/: AuctionHouseBot.h
src/server/game/Battlefield/: Battlefield.cpp  Battlefield.h  BattlefieldMgr.cpp  BattlefieldMgr.h
src/server/game/Battlegrounds/: ArenaTeam.cpp  ArenaTeam.h  ArenaTeamMgr.cpp  ArenaTeamMgr.h  Battleground.cpp  Battleground.h  BattlegroundMgr.cpp  BattlegroundMgr.h  BattlegroundQueue.cpp  BattlegroundQueue.h
src/server/game/Calendar/: CalendarMgr.cpp  CalendarMgr.h
src/server/game/Chat/: Chat.cpp  Chat.h  ChatLink.cpp  ChatLink.h
src/server/game/Combat/: HostileRefManager.cpp  HostileRefManager.h  ThreatManager.cpp  ThreatManager.h  UnitEvents.h
src/server/game/Conditions/: ConditionMgr.cpp  ConditionMgr.h  DisableMgr.cpp  DisableMgr.h
src/server/game/DataStores/: DBCEnums.h  DBCStores.cpp  DBCStores.h  DBCStructure.h  DBCfmt.h
src/server/game/DungeonFinding/: LFG.cpp  LFG.h  LFGGroupData.cpp  LFGGroupData.h  LFGMgr.cpp  LFGMgr.h  LFGPlayerData.cpp  LFGPlayerData.h  LFGQueue.cpp  LFGQueue.h  LFGScripts.cpp  LFGScripts.h
src/server/game/Events/: GameEventMgr.cpp  GameEventMgr.h
src/server/game/Globals/: ObjectAccessor.cpp  ObjectAccessor.h  ObjectMgr.cpp  ObjectMgr.h  SharedDefines.h
src/server/game/Grids/: Grid.h  GridDefines.h  GridLoader.h  GridRefManager.h  GridReference.h  GridStates.cpp  GridStates.h  NGrid.h  ObjectGridLoader.cpp  ObjectGridLoader.h
src/server/game/Groups/: Group.cpp  Group.h  GroupMgr.cpp  GroupMgr.h  GroupRefManager.h  GroupReference.cpp  GroupReference.h
src/server/game/Guilds/: Guild.cpp  Guild.h  GuildFinderMgr.cpp  GuildFinderMgr.h  GuildHandler.cpp  GuildMgr.cpp  GuildMgr.h
src/server/game/Handlers/: AddonHandler.cpp  AddonHandler.h  ArenaTeamHandler.cpp  AuctionHouseHandler.cpp  AuthHandler.cpp  BattleGroundHandler.cpp  BattlefieldHandler.cpp  CalendarHandler.cpp  ChannelHandler.cpp  CharacterHandler.cpp  ChatHandler.cpp  CombatHandler.cpp  DuelHandler.cpp  GroupHandler.cpp  GuildFinderHandler.cpp  (+22 more)
src/server/scripts/: CMakeLists.txt  GenLoader.cpp.cmake
src/server/shared/: AutoPtr.h  CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Containers.h  Define.h  SystemConfig.h
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  RARunnable.cpp  RASocket.cpp  oregoncore.conf.dist  worldserver.conf.dist  worldserver.rc
src/tools/: CMakeLists.txt
src/tools/map_extractor/: CMakeLists.txt  System.cpp  adt.cpp  adt.h  dbcfile.cpp  dbcfile.h  loadlib.cpp  mpq_libmpq.cpp  wdt.cpp  wdt.h
src/tools/mesh_extractor/: ADT.cpp  ADT.h  CMakeLists.txt  Cache.h  Chunk.cpp  Chunk.h  ChunkedData.cpp  ChunkedData.h  Constants.h  ContinentBuilder.cpp  ContinentBuilder.h  DBC.cpp  DBC.h  DoodadHandler.cpp  DoodadHandler.h  Geometry.cpp  Geometry.h  LiquidHandler.cpp  LiquidHandler.h  MPQ.cpp  MPQ.h  MPQManager.cpp  MPQManager.h  MapChunk.cpp  MapChunk.h  MeshExtractor.cpp  Model.cpp  Model.h  ObjectDataHandler.cpp  ObjectDataHandler.h  TileBuilder.cpp  TileBuilder.h  Utils.cpp  Utils.h  WDT.cpp  WDT.h  WorldModelGroup.cpp  WorldModelGroup.h  WorldModelHandler.cpp  WorldModelHandler.h  (+2 more)
src/tools/mmaps_generator/: CMakeLists.txt  IntermediateValues.cpp  IntermediateValues.h  MapBuilder.cpp  MapBuilder.h  PathCommon.h  PathGenerator.cpp  TerrainBuilder.cpp  TerrainBuilder.h  VMapExtensions.cpp
src/tools/vmap4_assembler/: CMakeLists.txt  VMapAssembler.cpp
src/tools/vmap4_extractor/: CMakeLists.txt  adtfile.cpp  adtfile.h  dbcfile.cpp  dbcfile.h  gameobject_extract.cpp  model.cpp  model.h  modelheaders.h  mpq_libmpq.cpp  vec3d.h  vmapexport.cpp  vmapexport.h  wdtfile.cpp  wdtfile.h  wmo.cpp  wmo.h
(+1315 files in other folders)
